--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <!-- application.html.erb in Head tag below turbolinks -->
     <%= javascript_pack_tag 'application' %>
     <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/antd/3.16.3/antd.css" %>
+    <%= stylesheet_pack_tag 'application' %>
 
   </head>
 
